...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" id="rfJ-kl-u3a">
                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <subviews>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Create a new thread:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="72q-hR-yhN">
                                    <rect key="frame" x="8" y="7" width="359" height="30"/>
                                    <accessibility key="accessibilityConfiguration">
                                        <bool key="isElement" value="NO"/>
                                    </accessibility>
                                    <nil key="textColor"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1SF-b8-xnd">
                                            <rect key="frame" x="16" y="5" width="33.5" height="20.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <accessibility key="accessibilityConfiguration" identifier="MessageThreadDetailTableViewController.ContentLabel"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="87w-9g-OIb">
                                            <rect key="frame" x="16" y="25.5" width="44" height="14.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <accessibility key="accessibilityConfiguration" identifier="MessageThreadDetailTableViewController.SenderLabel"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="duX-rG-AEh">
                                <rect key="frame" x="16" y="132" width="343" height="222.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NEl-Se-Sz1">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tpX-xP-KsX">
                                        <rect key="frame" x="0.0" y="38" width="343" height="184.5"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="myTextView"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                </subviews>
                            </stackView>
                        </subviews>
...
                            <constraint firstItem="duX-rG-AEh" firstAttribute="height" secondItem="Hj8-j0-bJt" secondAttribute="height" multiplier="1/3" id="IyU-HP-M75"/>
                            <constraint firstItem="Uch-WW-3au" firstAttribute="trailing" secondItem="duX-rG-AEh" secondAttribute="trailing" constant="16" id="Uwo-mH-euL"/>
                            <constraint firstItem="duX-rG-AEh" firstAttribute="leading" secondItem="Uch-WW-3au" secondAttribute="leading" constant="16" id="yEE-IP-SDu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Uch-WW-3au"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Message" id="cEt-mi-t96">
                        <barButtonItem key="rightBarButtonItem" title="Send" id="eC1-90-vuB">
                            <connections>
                                <action selector="sendMessage:" destination="BoB-4p-ZG3" id="k5g-wb-Dsb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
